some bugs are fixed

--- a/index.html
+++ b/index.html
@@ -225,28 +225,10 @@
                                 <div class="col-md-12">
 
                                     <!-- skillbar -->
-                                    <div class="skillbar" data-percent="81%"> <!--edit percentage-->
+                                    <div class="skillbar" data-percent="81%"> 
 
-                                        <h6 class="skillbar-title">HTML5</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">81%</h6> <!--edit percentage-->
-
-                                        <div class="skillbar-bar">
-                                            <div class="skillbar-child"></div>
-                                        </div>
-
-                                    </div>
-                                    <!-- end skillbar -->
-
-                                </div>
-
-
-                                <div class="col-md-12">
-
-                                    <!-- skillbar -->
-                                    <div class="skillbar" data-percent="70%"> <!--edit percentage-->
-
-                                        <h6 class="skillbar-title">CSS3</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">70%</h6> <!--edit percentage-->
+                                        <h6 class="skillbar-title">HTML5</h6> 
+                                        <h6 class="skillbar-percent">81%</h6> 
 
                                         <div class="skillbar-bar">
                                             <div class="skillbar-child"></div>
@@ -261,10 +243,28 @@
                                 <div class="col-md-12">
 
                                     <!-- skillbar -->
-                                    <div class="skillbar" data-percent="80%"> <!--edit percentage-->
+                                    <div class="skillbar" data-percent="70%"> 
 
-                                        <h6 class="skillbar-title">C++</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">80%</h6> <!--edit percentage-->
+                                        <h6 class="skillbar-title">CSS3</h6>
+                                        <h6 class="skillbar-percent">70%</h6> 
+
+                                        <div class="skillbar-bar">
+                                            <div class="skillbar-child"></div>
+                                        </div>
+
+                                    </div>
+                                    <!-- end skillbar -->
+
+                                </div>
+
+
+                                <div class="col-md-12">
+
+                                    <!-- skillbar -->
+                                    <div class="skillbar" data-percent="80%"> 
+
+                                        <h6 class="skillbar-title">C++</h6>
+                                        <h6 class="skillbar-percent">80%</h6>
 
                                         <div class="skillbar-bar">
                                             <div class="skillbar-child"></div>
@@ -280,28 +280,10 @@
                                 <div class="col-md-12">
 
                                     <!-- skillbar -->
-                                    <div class="skillbar" data-percent="65%"> <!--edit percentage-->
+                                    <div class="skillbar" data-percent="65%"> 
 
-                                        <h6 class="skillbar-title">Javascript</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">65%</h6> <!--edit percentage-->
-
-                                        <div class="skillbar-bar">
-                                            <div class="skillbar-child"></div>
-                                        </div>
-
-                                    </div>
-                                    <!-- end skillbar -->
-
-                                </div>
-
-
-                                <div class="col-md-12">
-
-                                    <!-- skillbar -->
-                                    <div class="skillbar" data-percent="75%"> <!--edit percentage-->
-
-                                        <h6 class="skillbar-title">C</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">75%</h6> <!--edit percentage-->
+                                        <h6 class="skillbar-title">Javascript</h6> 
+                                        <h6 class="skillbar-percent">65%</h6> 
 
                                         <div class="skillbar-bar">
                                             <div class="skillbar-child"></div>
@@ -316,10 +298,28 @@
                                 <div class="col-md-12">
 
                                     <!-- skillbar -->
-                                    <div class="skillbar" data-percent="20%"> <!--edit percentage-->
+                                    <div class="skillbar" data-percent="75%"> 
 
-                                        <h6 class="skillbar-title">Python</h6> <!--edit skills-->
-                                        <h6 class="skillbar-percent">20%</h6> <!--edit percentage-->
+                                        <h6 class="skillbar-title">C</h6> 
+                                        <h6 class="skillbar-percent">75%</h6> 
+
+                                        <div class="skillbar-bar">
+                                            <div class="skillbar-child"></div>
+                                        </div>
+
+                                    </div>
+                                    <!-- end skillbar -->
+
+                                </div>
+
+
+                                <div class="col-md-12">
+
+                                    <!-- skillbar -->
+                                    <div class="skillbar" data-percent="20%"> 
+
+                                        <h6 class="skillbar-title">Python</h6> 
+                                        <h6 class="skillbar-percent">20%</h6> 
 
                                         <div class="skillbar-bar">
                                             <div class="skillbar-child"></div>
@@ -458,7 +458,7 @@
     <div class="container">
         <div class="row">
             <div class="section-title">
-                <h2>My <span>Contact</span></h2>
+                <h2>Contact<span> Me</span></h2>
             </div>
         </div>
         <div class="row">
@@ -466,7 +466,7 @@
 
                 <form id="contact-form" method="post" action="contact.php" novalidate="true">
 
-                    <div class="messages"></div> <!--you can change the message in contact.php file -->
+                    <div class="messages"></div> <!--I have to chnage contact.php file -->
 
                     <div class="controls">
 
@@ -516,7 +516,7 @@
                     <div class="right-contact-text">
                         <i class="fa fa-globe"></i>
                         <h2>Website Address</h2>
-                        <p>www.yourwebsite.com</p>
+                        <p>www.sagar-singh.me</p>
                     </div>
                 </div>
             </div>
