--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 box-contact-form">
 
-                <form id="contact-form" method="post" action="contact.php" novalidate="true">
+                <form id="contact-form" method="post" action="https://formspree.io/mpzyrdko" novalidate="true">
 
                     <div class="messages"></div> <!--I have to chnage contact.php file -->
 
@@ -476,7 +476,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-send" name="submit" value="send">Send message</button>
+                                <button class="btn btn-send" value="Send">Send message</button>
                             </div>
                         </div>
                     </div>
