--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-send" value="Send">Send message</button>
+                                <button class="btn btn-send" value>Send message</button>
                             </div>
                         </div>
                     </div>
