--- a/index.html
+++ b/index.html
@@ -450,7 +450,9 @@
 
                 <form id="contact-form" method="post" action="https://formspree.io/mpzyrdko" novalidate="true">
 
-                    <div class="messages"></div> <!--I have to chnage contact.php file -->
+                    <div class="messages">
+                    	
+                    </div> <!--I have to chnage contact.php file -->
 
                     <div class="controls">
 
@@ -476,7 +478,7 @@
                                 </div>
                             </div>
                             <div class="col-md-12">
-                                <button class="btn btn-send" value>Send message</button>
+                                <button class="btn btn-send" value>Send Message</button>
                             </div>
                         </div>
                     </div>
