--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="col-sm-6">
                             <ul class="about-list">
-                                <li> <span class="title">Phone</span> <span class="value">+91 7063469550</span> </li>
+                                <li> <span class="title">Phone</span> <span class="value">+91 7*******0</span> </li>
                                 <li> <span class="title">Hobby</span> <span class="value">Cricket , Coding</span> </li>
                             </ul>
                         </div>
@@ -497,7 +497,7 @@
                     <div class="right-contact-text">
                         <i class="fa fa-phone"></i>
                         <h2>Contact Number</h2>
-                        <p>+91 7063469550</p>
+                        <p>+91 7********0</p>
                     </div>
                     <div class="right-contact-text">
                         <i class="fa fa-globe"></i>
