--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <div class="col-md-7 col-md-offset-1 col-sm-12">
                 <div class="about-right">
                     <h2>About Me</h2>
-                    <p>I am <span>Sagar Singh</span>, an undergraduate student at Sikkim Manipal Institute of Technology doing major in Computer Sicence Engineering.</p>
-                    <p>I have vast experience in HTML5, CSS3, Javascript and on. Also SMIT Hackathon Winner 2020.</p>
+                    <p>I am <span>Sagar Singh</span>, an undergraduate student at Sikkim Manipal Institute of Technology doing a major in Computer Science Engineering.</p>
+                    <p>I have vast experience in HTML5, CSS3, Javascript, and on. Also SMIT Hackathon Winner 2020.</p>
 
 
                     <div class="row">
