--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="main-menu">
                     <div class="navbar navbar-cus">
                         <div class="navbar-header">
-                            <a href="index.html" class="navbar-brand"><span class="logo">Sa<span>Gar</span></span></a>
+                            <a href="https://sagar-singh.me/" class="navbar-brand"><span class="logo">Sa<span>Gar</span></span></a>
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
