--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
 
                     <a href="#skills-bd" class="skill-btn btn-a">my skills</a>
-                    <a href="images/about/demo-cv.png" class="down-btn btn-a" download>download resume</a>
+                    <a href="CV/Sagar-CV.pdf" class="down-btn btn-a" download>download resume</a>
 
                 </div>
             </div>
