spelling mistake corrected

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                                 <h1 class="ah-headline">
 
                                     <span class="ah-words-wrapper">
-                                        <b class="is-visible">Web Developer</b>
-                                        <b>App Devoloper</b>
+                                        <b class="is-visible">MERN stack developer</b>
+                                        <b>App Developer</b>
                                     </span>
                                 </h1>
 
@@ -162,7 +162,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <ul class="about-list">
-                                <li> <span class="title">Age</span> <span class="value">20 Years</span> </li>
+                                <li> <span class="title">Age</span> <span class="value">22 Years</span> </li>
                                 <li> <span class="title">Email</span> <span class="value">singhkgp47@gmail.com</span> </li>
                             </ul>
                         </div>
@@ -512,7 +512,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-                <p>&copy; Made with ❤️ by Sagar Singh</p>
+                <p>2022 &copy; Made with ❤️ by Sagar Singh</p>
         </div>
     </div>
 </div>
