--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="main-menu">
                     <div class="navbar navbar-cus">
                         <div class="navbar-header">
-                            <a href="https://sagar-singh.me/" class="navbar-brand"><span class="logo">Sa<span>Gar</span></span></a>
+                            <a href="https://sagarsingh.live/" class="navbar-brand"><span class="logo">Sa<span>Gar</span></span></a>
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
@@ -102,7 +102,7 @@
                             <section class="intro animate-scale">
                                 
                                 <div class="img-area">
-                                    <img src="images/home/1.jpg" alt="">
+                                    <img src="images/home/5.jpg" alt="">
                                 </div>
 
                                 <h3>I'm Sagar Singh</h3>
@@ -110,8 +110,8 @@
                                 <h1 class="ah-headline">
 
                                     <span class="ah-words-wrapper">
-                                        <b class="is-visible">MERN stack developer</b>
-                                        <b>App Developer</b>
+                                        <b class="is-visible">Full Stack Web Developer</b>
+                                        <b>Problem Solver</b>
                                     </span>
                                 </h1>
 
@@ -156,7 +156,7 @@
                 <div class="about-right">
                     <h2>About Me</h2>
                     <p>I am <span>Sagar Singh</span>, an undergraduate student at Sikkim Manipal Institute of Technology doing a major in Computer Science Engineering.</p>
-                    <p>I have vast experience in HTML5, CSS3, Javascript, and on. Also SMIT Hackathon Winner 2020.</p>
+                    <p>I have vast experience in HTML, CSS, Javascript, ReactJs and on. Also SMIT Hackathon Winner 2020.</p>
 
 
                     <div class="row">
@@ -169,7 +169,7 @@
                         <div class="col-sm-6">
                             <ul class="about-list">
                                 <li> <span class="title">Phone</span> <span class="value">+91 7*******0</span> </li>
-                                <li> <span class="title">Hobby</span> <span class="value">Cricket , Coding</span> </li>
+                                <li> <span class="title">Hobby</span> <span class="value">Cricket , Playing Guitar</span> </li>
                             </ul>
                         </div>
                     </div>
@@ -211,7 +211,7 @@
                                     <!-- skillbar -->
                                     <div class="skillbar" data-percent="81%"> 
 
-                                        <h6 class="skillbar-title">HTML5</h6> 
+                                        <h6 class="skillbar-title">HTML</h6> 
                                         <h6 class="skillbar-percent">81%</h6> 
 
                                         <div class="skillbar-bar">
@@ -229,7 +229,7 @@
                                     <!-- skillbar -->
                                     <div class="skillbar" data-percent="70%"> 
 
-                                        <h6 class="skillbar-title">CSS3</h6>
+                                        <h6 class="skillbar-title">CSS</h6>
                                         <h6 class="skillbar-percent">70%</h6> 
 
                                         <div class="skillbar-bar">
@@ -344,8 +344,6 @@
                     <div class="col-xs-12">
                         <ul class="port-nav-list">
                             <li><a class="img-filter active" data-filter="*">All</a></li>
-                            <li><a class="img-filter" data-filter=".design">Web Design</a></li>
-                            <li><a class="img-filter" data-filter=".web">App Development</a></li>
                         </ul>
                     </div>
                 </div>
@@ -355,12 +353,12 @@
             <div class="row port-items" id="img-filter" style="position: relative; height: 570px;">
                 <div class="col-md-4 col-sm-6 col-xs-12 single-port design photography" style="position: absolute; left: 0px; top: 0px;">
                     <div class="project-item">
-                        <a href="images/port/1.png" class="zoom1">
-                            <img src="images/port/1.png" alt="portfolio image">
+                        <a href="images/port/4.png" class="zoom1">
+                            <img src="images/port/4.png" alt="portfolio image">
                             <div class="overlay">
                                 <div class="overlay-inner">
                                     <h4>Project One</h4>
-                                    <p>Own Portfolio</p>
+                                    <p>Coinbase Blockchain app</p>
                                 </div>
                             </div>
                         </a>
@@ -368,12 +366,12 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 single-port design" style="position: absolute; left: 380px; top: 0px;">
                     <div class="project-item">
-                        <a href="images/port/2.png" class="zoom1">
-                            <img src="images/port/2.png" alt="portfolio image">
+                        <a href="images/port/5.png" class="zoom1">
+                            <img src="images/port/5.png" alt="portfolio image">
                             <div class="overlay">
                                 <div class="overlay-inner">
                                     <h4>Project Two</h4>
-                                    <p>Restaurant site</p>
+                                    <p>Pizza Website</p>
                                 </div>
                             </div>
                         </a>
@@ -381,12 +379,12 @@
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 single-port web" style="position: absolute; left: 760px; top: 0px;">
                     <div class="project-item">
-                        <a href="images/port/3.png" class="zoom1">
-                            <img src="images/port/3.png" alt="portfolio image">
+                        <a href="images/port/6.png" class="zoom1">
+                            <img src="images/port/6.png" alt="portfolio image">
                             <div class="overlay">
                                 <div class="overlay-inner">
                                     <h4>Project Three</h4>
-                                    <p>Feedback App</p>
+                                    <p>Netflix Clone</p>
                                 </div>
                             </div>
                         </a>
@@ -485,7 +483,7 @@
                     <div class="right-contact-text">
                         <i class="fa fa-map-marker"></i>
                         <h2>Address</h2>
-                        <p>Hostel no.2, SMIT, Sikkim</p>
+                        <p>Hostel no.3, SMIT, Sikkim</p>
                     </div>
                     <div class="right-contact-text">
                         <i class="fa fa-phone"></i>
@@ -495,7 +493,7 @@
                     <div class="right-contact-text">
                         <i class="fa fa-globe"></i>
                         <h2>Website Address</h2>
-                        <p>www.sagar-singh.me</p>
+                        <p>www.sagarsingh.live</p>
                     </div>
                 </div>
             </div>
